# libftpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-push
.github/workflows/: regression.yml
docs/syntax_note/: 001_move_and_references.md  002_value_representation.md  003_variadic_templates.md
examples/: CMakeLists.txt  echo_server.cpp  perlin_noise_visualization.cpp
include/: libftpp.hpp
include/data_structures/: data_buffer.hpp  data_structures.hpp  object.hpp  pool.hpp  serialization_traits.bak  tlv.hpp  tlv_adapters.hpp  tlv_io.hpp  tlv_type_traits.hpp
include/data_structures/tlv/: adapters.hpp  io.hpp  tlv.hpp  tlv_reader.hpp  tlv_type.hpp  tlv_writer.hpp
include/design_patterns/: design_patterns.hpp  observer.hpp  singleton.hpp  state_machine.hpp
include/design_patterns/memento/: history.hpp  memento.hpp  saveable.hpp  snapio.hpp  tlv_adapters.hpp
include/iostream/: iostream.hpp  thread_safe_iostream.hpp
include/mathematics/: ivector2.hpp  ivector3.hpp  mathematics.hpp  perlin_noise_2D.hpp  random_2D_coordinate_generator.hpp
include/network/: acceptor.hpp  byte_queue.hpp  byte_queue_adapter.hpp  client.hpp  client_handle.hpp  connection.hpp  dispatcher.hpp  endpoint.hpp  i_message_codec.hpp  i_network_port.hpp  length_prefixed_codec.hpp  message.hpp  message_codec.hpp  network.hpp  network_port.hpp  outbound_port.hpp  peer_handle.hpp  server.hpp  stream_transport.hpp  tcp_acceptor.hpp  tcp_transport.hpp
include/network/components/: client.hpp  connection.hpp  dispatcher.hpp  message_builder.hpp  outbound_port.hpp  peer_handle.hpp  server.hpp
include/network/contracts/: acceptor.hpp  byte_queue.hpp  message_codec.hpp  network_port.hpp  reactor.hpp  stream_transport.hpp
include/network/core/: endpoint.hpp  message.hpp
include/network/impl/buffer/: byte_queue_adapter.hpp  tlv_adapters.hpp
include/network/impl/codec/: length_prefixed_codec.hpp
include/network/impl/reactor/: epoll_reactor.hpp
include/network/impl/tcp/: socket_utils.hpp  tcp_acceptor.hpp  tcp_transport.hpp
include/threading/: persistent_worker.hpp  thread.hpp  thread_safe_queue.hpp  threading.hpp  worker_pool.hpp
include/utils/: endian.hpp
scripts/: install-git-hooks.sh  run_regression.sh  run_tests_pretty.py  setup.sh
src/data_structures/: CMakeLists.txt  Makefile  data_buffer.cpp
src/design_patterns/: CMakeLists.txt  memento.cpp  observer.cpp
src/iostream/: CMakeLists.txt  thread_safe_iostream.cpp
src/mathematics/: CMakeLists.txt
src/network/: CMakeLists.txt
src/threading/: CMakeLists.txt  Makefile  persistent_worker.cpp  thread.cpp  thread_safe_queue.cpp  worker_pool.cpp
tests/: CMakeLists.txt  byte_queue_test.cpp  client_test.cpp  connection_test.cpp  databuffer_containers_test.cpp  databuffer_core_test.cpp  databuffer_determinism_test.cpp  databuffer_objects_test.cpp  databuffer_poly_test.cpp  databuffer_safety_test.cpp  databuffer_schema_test.cpp  databuffer_special_cases_test.cpp  dispatcher_test.cpp  ivector_test.cpp  length_prefixed_codec_test.cpp  memento_history_test.cpp  memento_saveable_test.cpp  memento_test.cpp  message_test.cpp  network_integration_test.cpp  observer_test.cpp  perlin_noise_2d_test.cpp  persistent_worker_test.cpp  pool_test.cpp  random_2d_coordinate_generator_test.cpp  server_test.cpp  singleton_test.cpp  state_machine_test.cpp  tcp_acceptor_test.cpp  tcp_transport_test.cpp  test_data_structures.cpp  thread_safe_iostream_test.cpp  thread_safe_queue_test.cpp  thread_test.cpp  tlv_test.cpp  worker_pool_test.cpp
